# image-server-benchmark

./: .env.example  .gitignore  .tool-versions  CDK.md  CLAUDE.md  DESIGN.md  Dockerfile.amazonlinux  ENV.md  Makefile  README.md  README_AMAZON_LINUX.md  README_SCRIPTS.md  clean-servers.sh  docker-compose.yml  fix-dependencies.sh  run-amazon-linux-prebuilt.sh  run-amazon-linux.sh  run-benchmark.sh  setup-amazon-linux.sh  start-servers-simple.sh  start-servers.sh  stop-servers.sh  test-all-servers.sh
images/: generate-images.sh
k6/: benchmark.js  config.js  package-lock.json  package.json  result-formatter.js  run-benchmark.js
provisioning-cdk/: README.md  cdk.json  deploy.sh  package-lock.json  package.json  tsconfig.json
provisioning-cdk/lib/: benchmark-stack.ts  config-reader.ts
scripts/: check-nodejs-amazon.sh  check-rust-deps.sh  fix-path.sh  install-server-deps.sh  run-benchmark.sh  setup-amazon-linux-fixed.sh  setup-amazon-linux-v2.sh  setup-amazon-linux.sh  setup-client.sh  setup-server.sh  test-health-endpoints.sh
scripts/utils/: load-env.sh
servers/: Makefile
servers/common/: config-loader.js  package-lock.json  package.json
servers/go/: .gitignore  Makefile  README.md  build-all.sh  diagnose-path.sh  fix-paths.sh  setup-env.sh  start-all.sh  stop-all.sh  test-servers.sh
servers/rust/: .gitignore  (+4 more)
servers/rust/actix/: Cargo.toml  start.sh
servers/rust/actix/src/: main.rs
servers/rust/axum/: Cargo.toml  start.sh
servers/rust/axum/src/: main.rs
servers/rust/rocket/: Cargo.toml  Makefile  start.sh
servers/rust/rocket/src/: main.rs
(+28 files in other folders)
